# motoro-package

./: .gitignore  README.MD  pyproject.toml
doc/: motoro.better_controller.html  motoro.game_base_entity.html  motoro.game_base_object.html
docs/: better_controller_EN.md  better_controller_FR.md  camera_EN.md  camera_FR.md  game_base_bloc_EN.md  game_base_bloc_FR.md  game_base_entity_EN.md  game_base_entity_FR.md  game_base_object_EN.md  game_base_object_FR.md  game_raw_entity_EN.md  game_raw_entity_FR.md  index.html  index.md  index_EN.md  index_FR.md  motoro.better_controller.html  motoro.game_base_bloc.html  motoro.game_base_entity.html  motoro.game_base_object.html  motoro.game_raw_entity.html  motoro.html  motoro.stage_variable.html  stage_variable_EN.md  stage_variable_FR.md
object_exemple/: player.py
src/motoro/: __init__.py  better_controller.py  camera.py  entity_variable.py  game_base_bloc.py  game_base_entity.py  game_base_object.py  game_raw_entity.py  player.py  stage_variable.py
